add local db connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "JitDb": "Server=LocalHost,1433;Database=Jit;User Id=sa;Password=yourStrong(!)Password; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
