add configvalues , init services

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "JitDb": "Server=LocalHost,1433;Database=Jit;User Id=sa;Password=yourStrong(!)Password; TrustServerCertificate=True"
   },
+
+  "Jwt": {
+    "Issuer": "https://localhost:50000",
+    "Audience": "https://localhost:50000",
+    "Key": "CrwJ3cyWZNIdLBFTZsrXp88be1ao+oe/Lq3Y25Glk1M="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
