Make use of dotnet secrets

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "JitDb": "Server=LocalHost,1433;Database=Jit;User Id=sa;Password=yourStrong(!)Password; TrustServerCertificate=True"
-  },
+//  "ConnectionStrings": {
+//    "JitDb": "Server=LocalHost,1433;Database=Jit;User Id=sa;Password=yourStrong(!)Password; TrustServerCertificate=True"
+//  },
 
   "Jwt": {
     "Issuer": "https://localhost:50000",
