--- a/JitAPI.csproj
+++ b/JitAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ecb6e09c-3b02-4443-bca9-7399d8a2f669</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
