add compose and update dev local db string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "JitDb": "Server=devdb,1433;Database=Jit;User Id=sa;Password=yourStrong(!)Password; TrustServerCertificate=True"
+    "JitDb": "Server=devdb,1433;Database=Jit;User Id=sa;Password=YourStrong!Passw0rd; TrustServerCertificate=True"
   },
 
   "Jwt": {
