update local connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "JitDb": "Server=devdb,1433;Database=Jit;User Id=sa;Password=YourStrong!Passw0rd; TrustServerCertificate=True"
+    "JitDb": "Server=127.0.0.1,1433;Database=Jit;User Id=sa;Password=YourStrong!Passw0rd; TrustServerCertificate=True"
   },
 
   "Jwt": {
